passbolt/service.yaml
apiVersion: v1
kind: Service
  labels:
    app.kubernetes.io/action: common
    app.kubernetes.io/instance: passbolt
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: passbolt
    app.kubernetes.io/type: svc
    app.kubernetes.io/version: 4.2.0-1-ce
    helm.sh/chart: passbolt-0.4.2
  name: passbolt
  namespace: passbolt
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/instance: passbolt
    app.kubernetes.io/name: passbolt
  sessionAffinity: None
  type: ClusterIP
