passbolt/allow-from-tools.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-tools
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tools-system
  podSelector: {}
  policyTypes:
  - Ingress
status: {}
